src/parser.output
Grammar

    0 $accept: program "end of file"

    1 program: unit

    2 unit: unit type
    3     | unit relation
    4     | unit fact
    5     | unit rule
    6     | unit component
    7     | unit comp_init
    8     | %empty

    9 type_id: "identifier"
   10        | type_id "." "identifier"

   11 type: "numeric type declaration" "identifier"
   12     | "symbolic type declaration" "identifier"
   13     | "type declaration" "identifier"
   14     | "type declaration" "identifier" "=" union_type
   15     | "type declaration" "identifier" "=" "[" record_type "]"
   16     | "type declaration" "identifier" "=" "[" "]"

   17 record_type: "identifier" ":" type_id
   18            | record_type "," "identifier" ":" type_id

   19 union_type: type_id
   20           | union_type "|" type_id

   21 rel_id: "identifier"
   22       | rel_id "." "identifier"

   23 non_empty_attributes: "identifier" ":" type_id
   24                     | attributes "," "identifier" ":" type_id

   25 attributes: non_empty_attributes
   26           | %empty

   27 qualifiers: qualifiers "relation qualifier output"
   28           | qualifiers "relation qualifier input"
   29           | qualifiers "relation qualifier data"
   30           | qualifiers "relation qualifier printsize"
   31           | qualifiers "relation qualifier overidable"
   32           | %empty

   33 relation: "relation declaration" "identifier" "(" attributes ")" qualifiers

   34 arg: "symbol"
   35    | "_"
   36    | "$"
   37    | "identifier"
   38    | "(" arg ")"
   39    | "number"
   40    | arg "bor" arg
   41    | arg "bxor" arg
   42    | arg "band" arg
   43    | arg "lor" arg
   44    | arg "land" arg
   45    | arg "+" arg
   46    | arg "-" arg
   47    | arg "*" arg
   48    | arg "/" arg
   49    | arg "%" arg
   50    | arg "^" arg
   51    | "concatenation of two strings" "(" arg "," arg ")"
   52    | "ordinal number of a string" "(" arg ")"
   53    | arg "type cast" "identifier"
   54    | "-" arg
   55    | "bnot" arg
   56    | "lnot" arg
   57    | "[" "]"
   58    | "[" record_list "]"
   59    | "nil reference"
   60    | "count aggregator" ":" atom
   61    | "count aggregator" ":" "{" body "}"
   62    | "sum aggregator" arg ":" atom
   63    | "sum aggregator" arg ":" "{" body "}"
   64    | "min aggregator" arg ":" atom
   65    | "min aggregator" arg ":" "{" body "}"
   66    | "max aggregator" arg ":" atom
   67    | "max aggregator" arg ":" "{" body "}"

   68 record_list: arg
   69            | record_list "," arg

   70 non_empty_arg_list: arg
   71                   | arg_list "," arg

   72 arg_list: non_empty_arg_list
   73         | %empty

   74 atom: rel_id "(" arg_list ")"

   75 literal: arg "relational operator" arg
   76        | arg "<" arg
   77        | arg ">" arg
   78        | arg "=" arg
   79        | atom
   80        | "match predicate" "(" arg "," arg ")"
   81        | "checks whether substring is contained in a string" "(" arg "," arg ")"

   82 fact: atom "."

   83 head: atom
   84     | head "," atom

   85 term: literal
   86     | "!" term
   87     | "(" disjunction ")"

   88 conjunction: term
   89            | conjunction "," term

   90 disjunction: conjunction
   91            | disjunction ";" conjunction

   92 body: disjunction

   93 exec_order_list: "number"
   94                | exec_order_list "," "number"

   95 exec_order: "(" exec_order_list ")"

   96 exec_plan_list: "number" ":" exec_order
   97               | exec_plan_list "," "number" ":" exec_order

   98 exec_plan: "plan keyword" exec_plan_list

   99 rule_def: head ":-" body "."

  100 rule: rule_def
  101     | rule "strict marker"
  102     | rule exec_plan

  103 type_param_list: "identifier"
  104                | type_param_list "," type_id

  105 type_params: %empty
  106            | "<" type_param_list ">"

  107 comp_type: "identifier" type_params

  108 component_head: "component declaration" comp_type
  109               | component_head ":" comp_type
  110               | component_head "," comp_type

  111 component_body: component_body type
  112               | component_body relation
  113               | component_body fact
  114               | component_body rule
  115               | component_body comp_override
  116               | component_body component
  117               | component_body comp_init
  118               | %empty

  119 component: component_head "{" component_body "}"

  120 comp_init: "component instantiation" "identifier" "=" comp_type

  121 comp_override: "override rules of super-component" "identifier"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"symbol" (258) 34
"identifier" (259) 9 10 11 12 13 14 15 16 17 18 21 22 23 24 33 37 53
    103 107 120 121
"number" (260) 39 93 94 96 97
"relational operator" (261) 75
"relation qualifier output" (262) 27
"relation qualifier input" (263) 28
"relation qualifier data" (264) 29
"relation qualifier printsize" (265) 30
"relation qualifier overidable" (266) 31
"match predicate" (267) 80
"checks whether substring is contained in a string" (268) 81
"concatenation of two strings" (269) 51
"ordinal number of a string" (270) 52
"min aggregator" (271) 64 65
"max aggregator" (272) 66 67
"count aggregator" (273) 60 61
"sum aggregator" (274) 62 63
"strict marker" (275) 101
"plan keyword" (276) 98
":-" (277) 99
"relation declaration" (278) 33
"override rules of super-component" (279) 121
"type declaration" (280) 13 14 15 16
"component declaration" (281) 108
"component instantiation" (282) 120
"numeric type declaration" (283) 11
"symbolic type declaration" (284) 12
"type cast" (285) 53
"nil reference" (286) 59
"|" (287) 20
"[" (288) 15 16 57 58
"]" (289) 15 16 57 58
"_" (290) 35
"$" (291) 36
"+" (292) 45
"-" (293) 46 54
"!" (294) 86
"(" (295) 33 38 51 52 74 80 81 87 95
")" (296) 33 38 51 52 74 80 81 87 95
"," (297) 18 24 51 69 71 80 81 84 89 94 97 104 110
":" (298) 17 18 23 24 60 61 62 63 64 65 66 67 96 97 109
";" (299) 91
"." (300) 10 22 82 99
"=" (301) 14 15 16 78 120
"*" (302) 47
"/" (303) 48
"^" (304) 50
"%" (305) 49
"{" (306) 61 63 65 67 119
"}" (307) 61 63 65 67 119
"<" (308) 76 106
">" (309) 77 106
"band" (310) 42
"bor" (311) 40
"bxor" (312) 41
"bnot" (313) 55
"land" (314) 44
"lor" (315) 43
"lnot" (316) 56
NEG (317)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
unit (65)
    on left: 2 3 4 5 6 7 8, on right: 1 2 3 4 5 6 7
type_id (66)
    on left: 9 10, on right: 10 17 18 19 20 23 24 104
type (67)
    on left: 11 12 13 14 15 16, on right: 2 111
record_type (68)
    on left: 17 18, on right: 15 18
union_type (69)
    on left: 19 20, on right: 14 20
rel_id (70)
    on left: 21 22, on right: 22 74
non_empty_attributes (71)
    on left: 23 24, on right: 25
attributes (72)
    on left: 25 26, on right: 24 33
qualifiers (73)
    on left: 27 28 29 30 31 32, on right: 27 28 29 30 31 33
relation (74)
    on left: 33, on right: 3 112
arg (75)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67, on right: 38 40
    41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 62 63 64 65 66
    67 68 69 70 71 75 76 77 78 80 81
record_list (76)
    on left: 68 69, on right: 58 69
non_empty_arg_list (77)
    on left: 70 71, on right: 72
arg_list (78)
    on left: 72 73, on right: 71 74
atom (79)
    on left: 74, on right: 60 62 64 66 79 82 83 84
literal (80)
    on left: 75 76 77 78 79 80 81, on right: 85
fact (81)
    on left: 82, on right: 4 113
head (82)
    on left: 83 84, on right: 84 99
term (83)
    on left: 85 86 87, on right: 86 88 89
conjunction (84)
    on left: 88 89, on right: 89 90 91
disjunction (85)
    on left: 90 91, on right: 87 91 92
body (86)
    on left: 92, on right: 61 63 65 67 99
exec_order_list (87)
    on left: 93 94, on right: 94 95
exec_order (88)
    on left: 95, on right: 96 97
exec_plan_list (89)
    on left: 96 97, on right: 97 98
exec_plan (90)
    on left: 98, on right: 102
rule_def (91)
    on left: 99, on right: 100
rule (92)
    on left: 100 101 102, on right: 5 101 102 114
type_param_list (93)
    on left: 103 104, on right: 104 106
type_params (94)
    on left: 105 106, on right: 107
comp_type (95)
    on left: 107, on right: 108 109 110 120
component_head (96)
    on left: 108 109 110, on right: 109 110 119
component_body (97)
    on left: 111 112 113 114 115 116 117 118, on right: 111 112 113
    114 115 116 117 119
component (98)
    on left: 119, on right: 6 116
comp_init (99)
    on left: 120, on right: 7 117
comp_override (100)
    on left: 121, on right: 115


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 8 (unit)

    program  go to state 1
    unit     go to state 2


State 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: unit .
    2 unit: unit . type
    3     | unit . relation
    4     | unit . fact
    5     | unit . rule
    6     | unit . component
    7     | unit . comp_init

    "identifier"                 shift, and go to state 4
    "relation declaration"       shift, and go to state 5
    "type declaration"           shift, and go to state 6
    "component declaration"      shift, and go to state 7
    "component instantiation"    shift, and go to state 8
    "numeric type declaration"   shift, and go to state 9
    "symbolic type declaration"  shift, and go to state 10

    $default  reduce using rule 1 (program)

    type            go to state 11
    rel_id          go to state 12
    relation        go to state 13
    atom            go to state 14
    fact            go to state 15
    head            go to state 16
    rule_def        go to state 17
    rule            go to state 18
    component_head  go to state 19
    component       go to state 20
    comp_init       go to state 21


State 3

    0 $accept: program "end of file" .

    $default  accept


State 4

   21 rel_id: "identifier" .

    $default  reduce using rule 21 (rel_id)


State 5

   33 relation: "relation declaration" . "identifier" "(" attributes ")" qualifiers

    "identifier"  shift, and go to state 22


State 6

   13 type: "type declaration" . "identifier"
   14     | "type declaration" . "identifier" "=" union_type
   15     | "type declaration" . "identifier" "=" "[" record_type "]"
   16     | "type declaration" . "identifier" "=" "[" "]"

    "identifier"  shift, and go to state 23


State 7

  108 component_head: "component declaration" . comp_type

    "identifier"  shift, and go to state 24

    comp_type  go to state 25


State 8

  120 comp_init: "component instantiation" . "identifier" "=" comp_type

    "identifier"  shift, and go to state 26


State 9

   11 type: "numeric type declaration" . "identifier"

    "identifier"  shift, and go to state 27


State 10

   12 type: "symbolic type declaration" . "identifier"

    "identifier"  shift, and go to state 28


State 11

    2 unit: unit type .

    $default  reduce using rule 2 (unit)


State 12

   22 rel_id: rel_id . "." "identifier"
   74 atom: rel_id . "(" arg_list ")"

    "("  shift, and go to state 29
    "."  shift, and go to state 30


State 13

    3 unit: unit relation .

    $default  reduce using rule 3 (unit)


State 14

   82 fact: atom . "."
   83 head: atom .

    "."  shift, and go to state 31

    $default  reduce using rule 83 (head)


State 15

    4 unit: unit fact .

    $default  reduce using rule 4 (unit)


State 16

   84 head: head . "," atom
   99 rule_def: head . ":-" body "."

    ":-"  shift, and go to state 32
    ","   shift, and go to state 33


State 17

  100 rule: rule_def .

    $default  reduce using rule 100 (rule)


State 18

    5 unit: unit rule .
  101 rule: rule . "strict marker"
  102     | rule . exec_plan

    "strict marker"  shift, and go to state 34
    "plan keyword"   shift, and go to state 35

    $default  reduce using rule 5 (unit)

    exec_plan  go to state 36


State 19

  109 component_head: component_head . ":" comp_type
  110               | component_head . "," comp_type
  119 component: component_head . "{" component_body "}"

    ","  shift, and go to state 37
    ":"  shift, and go to state 38
    "{"  shift, and go to state 39


State 20

    6 unit: unit component .

    $default  reduce using rule 6 (unit)


State 21

    7 unit: unit comp_init .

    $default  reduce using rule 7 (unit)


State 22

   33 relation: "relation declaration" "identifier" . "(" attributes ")" qualifiers

    "("  shift, and go to state 40


State 23

   13 type: "type declaration" "identifier" .
   14     | "type declaration" "identifier" . "=" union_type
   15     | "type declaration" "identifier" . "=" "[" record_type "]"
   16     | "type declaration" "identifier" . "=" "[" "]"

    "="  shift, and go to state 41

    $default  reduce using rule 13 (type)


State 24

  107 comp_type: "identifier" . type_params

    "<"  shift, and go to state 42

    $default  reduce using rule 105 (type_params)

    type_params  go to state 43


State 25

  108 component_head: "component declaration" comp_type .

    $default  reduce using rule 108 (component_head)


State 26

  120 comp_init: "component instantiation" "identifier" . "=" comp_type

    "="  shift, and go to state 44


State 27

   11 type: "numeric type declaration" "identifier" .

    $default  reduce using rule 11 (type)


State 28

   12 type: "symbolic type declaration" "identifier" .

    $default  reduce using rule 12 (type)


State 29

   74 atom: rel_id "(" . arg_list ")"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    $default  reduce using rule 73 (arg_list)

    arg                 go to state 62
    non_empty_arg_list  go to state 63
    arg_list            go to state 64


State 30

   22 rel_id: rel_id "." . "identifier"

    "identifier"  shift, and go to state 65


State 31

   82 fact: atom "." .

    $default  reduce using rule 82 (fact)


State 32

   99 rule_def: head ":-" . body "."

    "symbol"                                             shift, and go to state 45
    "identifier"                                         shift, and go to state 66
    "number"                                             shift, and go to state 47
    "match predicate"                                    shift, and go to state 67
    "checks whether substring is contained in a string"  shift, and go to state 68
    "concatenation of two strings"                       shift, and go to state 48
    "ordinal number of a string"                         shift, and go to state 49
    "min aggregator"                                     shift, and go to state 50
    "max aggregator"                                     shift, and go to state 51
    "count aggregator"                                   shift, and go to state 52
    "sum aggregator"                                     shift, and go to state 53
    "nil reference"                                      shift, and go to state 54
    "["                                                  shift, and go to state 55
    "_"                                                  shift, and go to state 56
    "$"                                                  shift, and go to state 57
    "-"                                                  shift, and go to state 58
    "!"                                                  shift, and go to state 69
    "("                                                  shift, and go to state 70
    "bnot"                                               shift, and go to state 60
    "lnot"                                               shift, and go to state 61

    rel_id       go to state 12
    arg          go to state 71
    atom         go to state 72
    literal      go to state 73
    term         go to state 74
    conjunction  go to state 75
    disjunction  go to state 76
    body         go to state 77


State 33

   84 head: head "," . atom

    "identifier"  shift, and go to state 4

    rel_id  go to state 12
    atom    go to state 78


State 34

  101 rule: rule "strict marker" .

    $default  reduce using rule 101 (rule)


State 35

   98 exec_plan: "plan keyword" . exec_plan_list

    "number"  shift, and go to state 79

    exec_plan_list  go to state 80


State 36

  102 rule: rule exec_plan .

    $default  reduce using rule 102 (rule)


State 37

  110 component_head: component_head "," . comp_type

    "identifier"  shift, and go to state 24

    comp_type  go to state 81


State 38

  109 component_head: component_head ":" . comp_type

    "identifier"  shift, and go to state 24

    comp_type  go to state 82


State 39

  119 component: component_head "{" . component_body "}"

    $default  reduce using rule 118 (component_body)

    component_body  go to state 83


State 40

   33 relation: "relation declaration" "identifier" "(" . attributes ")" qualifiers

    "identifier"  shift, and go to state 84

    $default  reduce using rule 26 (attributes)

    non_empty_attributes  go to state 85
    attributes            go to state 86


State 41

   14 type: "type declaration" "identifier" "=" . union_type
   15     | "type declaration" "identifier" "=" . "[" record_type "]"
   16     | "type declaration" "identifier" "=" . "[" "]"

    "identifier"  shift, and go to state 87
    "["           shift, and go to state 88

    type_id     go to state 89
    union_type  go to state 90


State 42

  106 type_params: "<" . type_param_list ">"

    "identifier"  shift, and go to state 91

    type_param_list  go to state 92


State 43

  107 comp_type: "identifier" type_params .

    $default  reduce using rule 107 (comp_type)


State 44

  120 comp_init: "component instantiation" "identifier" "=" . comp_type

    "identifier"  shift, and go to state 24

    comp_type  go to state 93


State 45

   34 arg: "symbol" .

    $default  reduce using rule 34 (arg)


State 46

   37 arg: "identifier" .

    $default  reduce using rule 37 (arg)


State 47

   39 arg: "number" .

    $default  reduce using rule 39 (arg)


State 48

   51 arg: "concatenation of two strings" . "(" arg "," arg ")"

    "("  shift, and go to state 94


State 49

   52 arg: "ordinal number of a string" . "(" arg ")"

    "("  shift, and go to state 95


State 50

   64 arg: "min aggregator" . arg ":" atom
   65    | "min aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 96


State 51

   66 arg: "max aggregator" . arg ":" atom
   67    | "max aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 97


State 52

   60 arg: "count aggregator" . ":" atom
   61    | "count aggregator" . ":" "{" body "}"

    ":"  shift, and go to state 98


State 53

   62 arg: "sum aggregator" . arg ":" atom
   63    | "sum aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 99


State 54

   59 arg: "nil reference" .

    $default  reduce using rule 59 (arg)


State 55

   57 arg: "[" . "]"
   58    | "[" . record_list "]"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "]"                             shift, and go to state 100
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg          go to state 101
    record_list  go to state 102


State 56

   35 arg: "_" .

    $default  reduce using rule 35 (arg)


State 57

   36 arg: "$" .

    $default  reduce using rule 36 (arg)


State 58

   54 arg: "-" . arg

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 103


State 59

   38 arg: "(" . arg ")"

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 104


State 60

   55 arg: "bnot" . arg

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 105


State 61

   56 arg: "lnot" . arg

    "symbol"                        shift, and go to state 45
    "identifier"                    shift, and go to state 46
    "number"                        shift, and go to state 47
    "concatenation of two strings"  shift, and go to state 48
    "ordinal number of a string"    shift, and go to state 49
    "min aggregator"                shift, and go to state 50
    "max aggregator"                shift, and go to state 51
    "count aggregator"              shift, and go to state 52
    "sum aggregator"                shift, and go to state 53
    "nil reference"                 shift, and go to state 54
    "["                             shift, and go to state 55
    "_"                             shift, and go to state 56
    "$"                             shift, and go to state 57
    "-"                             shift, and go to state 58
    "("                             shift, and go to state 59
    "bnot"                          shift, and go to state 60
    "lnot"                          shift, and go to state 61

    arg  go to state 106


State 62

   40 arg: arg . "bor" arg
   41    | arg . "bxor" arg
   42    | arg . "band" arg
   43    | arg . "lor" arg
   44    | arg . "land" arg
   45    | arg . "+" arg
   46    | arg . "-" arg
   47    | arg . "*" arg
   48    | arg . "/" arg
   49    | arg . "%" arg
   50    | arg . "^" arg
   53    | arg . "type cast" "identifier"
   70 non_empty_arg_list: arg .

    "type cast"  shift, and go to state 107
    "+"          shift, and go to state 108
    "-"          shift, and go to state 109
    "*"          shift, and go to state 110
    "/"          shift, and go to state 111
    "^"          shift, and go to state 112
    "%"          shift, and go to state 113
    "band"       shift, and go to state 114
    "bor"        shift, and go to state 115
    "bxor"       shift, and go to state 116
    "land"       shift, and go to state 117
    "lor"        shift, and go to state 118

    $default  reduce using rule 70 (non_empty_arg_list)


State 63

   72 arg_list: non_empty_arg_list .

    $default  reduce using rule 72 (arg_list)


State 64

   71 non_empty_arg_list: arg_list . "," arg
   74 atom: rel_id "(" arg_list . ")"

    ")"  shift, and go to state 119
    ","  shift, and go to state 120


State 65

   22 rel_id: rel_id "." "identifier" .

    $default  reduce using rule 22 (rel_id)


State 66

   21 rel_id: "identifier" .
   37 arg: "identifier" .

    "("       reduce using rule 21 (rel_id)
    "."       reduce using rule 21 (rel_id)
    $default  reduce using rule 37 (arg)


State 67

   80 literal: "match predicate" . "(" arg "," arg ")"

    "("  shift, and go to state 121


State 68

   81 literal: "checks whether substring is contained in a string" . "(" arg "," arg ")"

    "("  shift, and go to state 122


State 69

   86 term: "!" . term

    "symbol"                                             shift, and go to state 45
    "identifier"                                         shift, and go to state 66
    "number"                                             shift, and go to state 47
    "match predicate"                                    shift, and go to state 67
    "checks whether substring is contained in a string"  shift, and go to state 68
    "concatenation of two strings"                       shift, and go to state 48
    "ordinal number of a string"                         shift, and go to state 49
    "min aggregator"                                     shift, and go to state 50
    "max aggregator"                                     shift, and go to state 51
    "count aggregator"                                   shift, and go to state 52
    "sum aggregator"                                     shift, and go to state 53
    "nil reference"                                      shift, and go to state 54
    "["                                                  shift, and go to state 55
    "_"                                                  shift, and go to state 56
    "$"                                                  shift, and go to state 57
    "-"                                                  shift, and go to state 58
    "!"                                                  shift, and go to state 69
    "("                                                  shift, and go to state 70
    "bnot"                                               shift, and go to state 60
    "lnot"                                               shift, and go to state 61

    rel_id   go to state 12
    arg      go to state 71
    atom     go to state 72
    literal  go to state 73
    term     go to state 123


State 70

   38 arg: "(" . arg ")"
   87 term: "(" . disjunction ")"

    "symbol"                                             shift, and go to state 45
    "identifier"                                         shift, and go to state 66
    "number"                                             shift, and go to state 47
    "match predicate"                                    shift, and go to state 67
    "checks whether substring is contained in a string"  shift, and go to state 68
    "concatenation of two strings"                       shift, and go to state 48
    "ordinal number of a string"                         shift, and go to state 49
    "min aggregator"                                     shift, and go to state 50
    "max aggregator"                                     shift, and go to state 51
    "count aggregator"                                   shift, and go to state 52
    "sum aggregator"                                     shift, and go to state 53
    "nil reference"                                      shift, and go to state 54
    "["                                                  shift, and go to state 55
    "_"                                                  shift, and go to state 56
    "$"                                                  shift, and go to state 57
    "-"                                                  shift, and go to state 58
    "!"                                                  shift, and go to state 69
    "("                                                  shift, and go to state 70
    "bnot"                                               shift, and go to state 60
    "lnot"                                               shift, and go to state 61

    rel_id       go to state 12
    arg          go to state 124
    atom         go to state 72
    literal      go to state 73
    term         go to state 74
    conjunction  go to state 75
    disjunction  go to state 125


State 71

   40 arg: arg . "bor" arg
   41    | arg . "bxor" arg
   42    | arg . "band" arg
   43    | arg . "lor" arg
   44    | arg . "land" arg
   45    | arg . "+" arg
   46    | arg . "-" arg
   47    | arg . "*" arg
   48    | arg . "/" arg
   49    | arg . "%" arg
   50    | arg . "^" arg
   53    | arg . "type cast" "identifier"
   75 literal: arg . "relational operator" arg
   76        | arg . "<" arg
   77        | arg . ">" arg
   78        | arg . "=" arg

    "relational operator"  shift, and go to state 126
    "type cast"            shift, and go to state 107
    "+"                    shift, and go to state 108
    "-"                    shift, and go to state 109
    "="                    shift, and go to state 127
    "*"                    shift, and go to state 110
    "/"                    shift, and go to state 111
    "^"                    shift, and go to state 112
    "%"                    shift, and go to state 113
    "<"                    shift, and go to state 128
    ">"                    shift, and go to state 129
    "band"                 shift, and go to state 114
    "bor"                  shift, and go to state 115
    "bxor"                 shift, and go to state 116
    "land"                 shift, and go to state 117
    "lor"                  shift, and go to state 118


State 72

   79 literal: atom .

    $default  reduce using rule 79 (literal)


State 73

   85 term: literal .

    $default  reduce using rule 85 (term)


State 74

   88 conjunction: term .

    $default  reduce using rule 88 (conjunction)


State 75

   89 conjunction: conjunction . "," term
   90 disjunction: conjunction .

    ","  shift, and go to state 130

    $default  reduce using rule 90 (disjunction)


State 76

   91 disjunction: disjunction . ";" conjunction
   92 body: disjunction .

    ";"  shift, and go to state 131

    $default  reduce using rule 92 (body)


State 77

   99 rule_def: head ":-" body . "."

    "."  shift, and go to state 132


State 78

   84 head: head "," atom .

    $default  reduce using rule 84 (head)


State 79

   96 exec_plan_list: "number" . ":" exec_order

    ":"  shift, and go to state 133


State 80

   97 exec_plan_list: exec_plan_list . "," "number" ":" exec_order
   98 exec_plan: "plan keyword" exec_plan_list .

    ","  shift, and go to state 134

    $default  reduce using rule 98 (exec_plan)


State 81

  110 component_head: component_head "," comp_type .

    $default  reduce using rule 110 (component_head)


State 82

  109 component_head: component_head ":" comp_type .

    $default  reduce using rule 109 (component_head)


State 83

  111 component_body: component_body . type
  112               | component_body . relation
  113               | component_body . fact
  114               | component_body . rule
  115               | component_body . comp_override
  116               | component_body . component
  117               | component_body . comp_init
  119 component: component_head "{" component_body . "}"

    "identifier"                         shift, and go to state 4
    "relation declaration"               shift, and go to state 5
    "override rules of super-component"  shift, and go to state 135
    "type declaration"                   shift, and go to state 6
    "component declaration"              shift, and go to state 7
    "component instantiation"            shift, and go to state 8
    "numeric type declaration"           shift, and go to state 9
    "symbolic type declaration"          shift, and go to state 10
    "}"                                  shift, and go to state 136

    type            go to state 137
    rel_id          go to state 12
    relation        go to state 138
    atom            go to state 14
    fact            go to state 139
    head            go to state 16
    rule_def        go to state 17
    rule            go to state 140
    component_head  go to state 19
    component       go to state 141
    comp_init       go to state 142
    comp_override   go to state 143


State 84

   23 non_empty_attributes: "identifier" . ":" type_id

    ":"  shift, and go to state 144


State 85

   25 attributes: non_empty_attributes .

    $default  reduce using rule 25 (attributes)


State 86

   24 non_empty_attributes: attributes . "," "identifier" ":" type_id
   33 relation: "relation declaration" "identifier" "(" attributes . ")" qualifiers

    ")"  shift, and go to state 145
    ","  shift, and go to state 146


State 87

    9 type_id: "identifier" .

    $default  reduce using rule 9 (type_id)


State 88

   15 type: "type declaration" "identifier" "=" "[" . record_type "]"
   16     | "type declaration" "identifier" "=" "[" . "]"

    "identifier"  shift, and go to state 147
    "]"           shift, and go to state 148

    record_type  go to state 149


State 89

   10 type_id: type_id . "." "identifier"
   19 union_type: type_id .

    "."  shift, and go to state 150

    $default  reduce using rule 19 (union_type)


State 90

   14 type: "type declaration" "identifier" "=" union_type .
   20 union_type: union_type . "|" type_id

    "|"  shift, and go to state 151

    $default  reduce using rule 14 (type)


State 91

  103 type_param_list: "identifier" .

    $default  reduce using rule 103 (type_param_list)


State 92

  104 type_param_list: type_param_list . "," type_id
  106 type_params: "<" type_param_list . ">"

    ","  shift, and go to state 152
    ">"  shift, and go to state 153


State 93

  120 comp_init: "component instantiation" "identifier" "=" comp_type .

    $default  reduce using rule 120 (comp_init)


State 94

   51 arg: "concatenation of two strings" "(" . arg "," arg ")"
